--- a/mvc2/validation/src/main/resources/templates/validation/v2/addForm.html
+++ b/mvc2/validation/src/main/resources/templates/validation/v2/addForm.html
@@ -30,29 +30,28 @@
 
         <div>
             <label for="itemName" th:text="#{label.item.itemName}">상품명</label>
-            <input type="text" id="itemName" th:field="*{itemName}"
-                   th:errorclass="field-error" class="form-control" placeholder="이름을 입력하세요">
-            <div class="field-error" th:errors="*{itemName}">
-                상품명 오류
+            <input type="text" id="itemName" th:field="*{itemName}" class="form-control" placeholder="이름을 입력하세요"
+                   th:errorclass="field-error">
+            <div th:errors="*{itemName}" th:class="field-error">
+                상품명오류
             </div>
+
         </div>
         <div>
             <label for="price" th:text="#{label.item.price}">가격</label>
-            <input type="text" id="price" th:field="*{price}"
-                   th:errorclass="field-error" class="form-control" placeholder="가격을 입력하세요">
-            <div class="field-error" th:errors="*{price}">
+            <input type="text" id="price" th:field="*{price}" class="form-control" placeholder="가격을 입력하세요"
+                   th:errorclass="field-error">
+            <div th:errors="*{price}" th:class="field-error">
                 가격 오류
             </div>
         </div>
-
         <div>
             <label for="quantity" th:text="#{label.item.quantity}">수량</label>
-            <input type="text" id="quantity" th:field="*{quantity}"
-                   th:errorclass="field-error" class="form-control" placeholder="수량을 입력하세요">
-            <div class="field-error" th:errors="*{quantity}">
+            <input type="text" id="quantity" th:field="*{quantity}" class="form-control" placeholder="수량을 입력하세요"
+                   th:errorclass="field-error">
+            <div th:errors="*{quantity}" th:class="field-error">
                 수량 오류
             </div>
-
         </div>
 
         <hr class="my-4">
