--- a/mvc2/validation/src/main/resources/templates/validation/v1/addForm.html
+++ b/mvc2/validation/src/main/resources/templates/validation/v1/addForm.html
@@ -25,37 +25,33 @@
     <form action="item.html" th:action th:object="${item}" method="post">
 
         <div th:if="${errors?.containsKey('globalError')}">
-            <p class="field-error" th:text="${errors['globalError']}">전체 오류 메시지</p>
+            <p th:class="field-error" th:text="${errors?.get('globalError')}"></p>
         </div>
 
         <div>
             <label for="itemName" th:text="#{label.item.itemName}">상품명</label>
-            <input type="text" id="itemName" th:field="*{itemName}"
-                   th:class="${errors?.containsKey('itemName')} ? 'form-control field-error' : 'form-control'"
-                   class="form-control" placeholder="이름을 입력하세요">
-            <div class="field-error" th:if="${errors?.containsKey('itemName')}" th:text="${errors['itemName']}">
-                상품명 오류
+            <input type="text" id="itemName" th:field="*{itemName}" class="form-control" placeholder="이름을 입력하세요"
+                   th:classappend="${errors?.containsKey('itemName')}?'field-error':_">
+            <div th:if="${errors?.containsKey('itemName')}" th:text="${errors['itemName']}" th:class="field-error">
+                상품명오류
             </div>
+
         </div>
         <div>
             <label for="price" th:text="#{label.item.price}">가격</label>
-            <input type="text" id="price" th:field="*{price}"
-                   th:class="${errors?.containsKey('price')} ? 'form-control field-error' : 'form-control'"
-                   class="form-control" placeholder="가격을 입력하세요">
-            <div class="field-error" th:if="${errors?.containsKey('price')}" th:text="${errors['price']}">
+            <input type="text" id="price" th:field="*{price}" class="form-control" placeholder="가격을 입력하세요"
+                   th:classappend="${errors?.containsKey('price')}?'field-error':_">
+            <div th:if="${errors?.containsKey('price')}" th:text="${errors['price']}" th:class="field-error">
                 가격 오류
             </div>
         </div>
-
         <div>
             <label for="quantity" th:text="#{label.item.quantity}">수량</label>
-            <input type="text" id="quantity" th:field="*{quantity}"
-                   th:class="${errors?.containsKey('quantity')} ? 'form-control field-error' : 'form-control'"
-                   class="form-control" placeholder="수량을 입력하세요">
-            <div class="field-error" th:if="${errors?.containsKey('quantity')}" th:text="${errors['quantity']}">
+            <input type="text" id="quantity" th:field="*{quantity}" class="form-control" placeholder="수량을 입력하세요"
+                th:classappend="${errors?.containsKey('quantity')}?'field-error':_">
+            <div th:if="${errors?.containsKey('quantity')}" th:text="${errors['quantity']}" th:class="field-error">
                 수량 오류
             </div>
-
         </div>
 
         <hr class="my-4">
