--- a/mvc2/validation/src/main/resources/templates/validation/v2/addForm.html
+++ b/mvc2/validation/src/main/resources/templates/validation/v2/addForm.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
     <link th:href="@{/css/bootstrap.min.css}"
