--- a/React_start/study_by_book/src/reactBasic/ch10/style/TodoListItem.scss
+++ b/React_start/study_by_book/src/reactBasic/ch10/style/TodoListItem.scss
@@ -1,3 +1,9 @@
+.TodoListItem-virtualized {
+  & + & {
+    border-top: 1px solid #dee2e6;
+  }
+}
+
 .TodoListItem {
   padding: 1rem;
   display: flex;
