--- a/JPA/jpashop/src/main/resources/templates/order/orderList.html
+++ b/JPA/jpashop/src/main/resources/templates/order/orderList.html
@@ -16,7 +16,7 @@
                 <div class="form-group mx-sm-1 mb-2">
                     <select th:field="*{orderStatus}" class="form-control">
                         <option value="">주문상태</option>
-                        <option th:each="status : ${T(jpabook.jpashop.domain.OrderStatus).values()}"
+                        <option th:each="status : ${T(com.example.jpashop.domain.OrderStatus).values()}"
                                 th:value="${status}"
                                 th:text="${status}">option
                         </option>
