--- a/JPA/jpashop/src/main/resources/templates/fragments/bodyHeader.html
+++ b/JPA/jpashop/src/main/resources/templates/fragments/bodyHeader.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <div class="header" th:fragment="bodyHeader">
-    <ul class="nav nav-pills pull-right">
+    <!--<ul class="nav nav-pills pull-right">
         <li><a href="/">Home</a></li>
-    </ul>
+    </ul>-->
     <a href="/"><h3 class="text-muted">HELLO SHOP</h3></a>
 </div>
